@@ -206,6 +206,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   preferences don't get stuck in proxy caches for other people
 * (bug 7324) Fix error message for failure of Database::sourceFile()
 * (bug 7309) Plurals: use singular form for zero in French and Brazilian Portuguese
+* Add page_no_title_convert field to support language variant conversion
+  for page titles which shouldn't be converted on display/linking
 
 
 == Languages updated ==
